# basic-web-app

./: .gitignore  Cargo.toml  README.md  config.toml  schema.sql
frontend/: .prettierignore  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
src/: config.rs  debug_middleware.rs  main.rs  manifest.rs
src/auth/: errors.rs  handlers.rs  middleware.rs  mod.rs
src/csrf/: middleware.rs
src/models/: session.rs  user.rs
src/repositories/: mod.rs  session_repository.rs  user_repository.rs
